examples/test/testpolicy13583.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13583
  namespace: namespace436
spec:
  podSelector:
    matchLabels:
      key28: value16
      key5: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value42
          key11: value28
      podSelector:
        matchLabels:
          key10: value25
          key44: value49
          key43: value43
